java-web-app-master/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myapp

  labels:
    app:  myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  myapp
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  myapp
        image:  12bk/myapp
        
        
        ports:
        - containerPort:  80
          name:  myapp
---
apiVersion: v1
kind: Service
metadata:
  name: svc1

spec:
  selector:
    app: myapp
  type: NodePort
  
  ports:
  - name: myapp
    protocol: TCP
    port: 80
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 31500
