java-web-app-master/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myappingress
  
spec:
  rules:
  - host: my.samadounoorcloudsolutions.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ikapp-myapp
            port:
              number: 80
